@@ -545,6 +545,9 @@ Windows
 C API
 -----
 
+- Issue #28822: The indices parameters *start* and *end* of PyUnicode_FindChar()
+  are now adjusted to behave like ``str[start:end]``.
+
 - Issue #28808: PyUnicode_CompareWithASCIIString() now never raises exceptions.
 
 - Issue #28761: The fields name and doc of structures PyMemberDef, PyGetSetDef,
